--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         try {
             var akPush = new AKPush();
 
-            akPush.initSubscription({ email: 'test_safari@ru.ru' }) // ..показать форму подписки
+            akPush.initSubscription({ email: 'test_safari212@ru.ru' }) // ..показать форму подписки
         }
         catch (e) {
             console.log(e); // Или записать ошибку в консоль браузера
