--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwx"></script>
 </head>
 <body>
-<button id="init_sub">TEST PIXEL на уведомления</button>
+<button type="button" id="init_sub">TEST PIXEL на уведомления</button>
 <h1>Something for scroll</h1>
 <h1>Something for scroll</h1>
 <h1>Something for scroll</h1>
@@ -58,7 +58,7 @@
         try {
             var akPush = new AKPush();
 
-            akPush.initSubscription({ email: 'test_safari212@ru.ru' }) // ..показать форму подписки
+            akPush.initSubscription({ email: 'test_safari212ghjk@cssds.com' }) // ..показать форму подписки
         }
         catch (e) {
             console.log(e); // Или записать ошибку в консоль браузера
