--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             akPush.initSubscription({ email: 'test_safari212ghjk@cssds.com' }) // ..показать форму подписки
         }
         catch (e) {
-            console.log(e); // Или записать ошибку в консоль браузера
+            alert(JSON.stringify(e)); // Или записать ошибку в alert (консоль) браузера
         }
     });
 </script>
