--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwx"></script>
 </head>
 <body>
-<button type="button" id="init_sub">TEST PIXEL на уведомления</button>
+<button type="button" id="init_sub" style="height: 100px; padding: 25px">TEST PIXEL на уведомления</button>
 <h1>Something for scroll</h1>
 <h1>Something for scroll</h1>
 <h1>Something for scroll</h1>
