--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwx"></script>
+    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwz"></script>
 </head>
 <body>
 <button type="button" id="init_sub" style="height: 100px; padding: 25px">TEST PIXEL на уведомления</button>
@@ -58,7 +58,7 @@
         try {
             var akPush = new AKPush();
 
-            akPush.initSubscription({ email: 'test_safari212ghjk@cssds.com' }) // ..показать форму подписки
+            akPush.initSubscription({ email: 'chrome_on_the_machintosh@azcabaeba.su' }) // ..показать форму подписки
         }
         catch (e) {
             alert(JSON.stringify(e)); // Или записать ошибку в alert (консоль) браузера
@@ -67,7 +67,7 @@
 </script>
 <!-- START OF ALTCRAFT PIXEL CODE !-->
 <script type="text/javascript">
-    !function(){var e={url:"https://pxl.andrey-morozov.dev.altkraft.com/pixel?k=34FyFph%2BVuzFYrhPh7C10LKGAC08z3lrm%2Fqui6fGQJa6XD9SM9jghQ%3D%3D&s=qpH7UKN%2BkZA%3D",goals:"ACMEProduct777_BUY_Label2",value:parseFloat("0"),timeout:parseInt("0"),after_scroll:JSON.parse("false"),auto_load:JSON.parse("true")},o=function(o,t,n,a){var d=[].concat(o).map(function(e){return encodeURIComponent(e)}).join(","),c=encodeURIComponent(String(t||0)),i=encodeURIComponent(n.matching_mode||""),r=encodeURIComponent(n.db_id||0),u=encodeURIComponent(JSON.stringify(n.match||{})),l=encodeURIComponent(JSON.stringify(n.update||{}));setTimeout(function(){(new Image).src=[e.url,"goals="+d,"value="+c,"db_id="+r,"mmode="+i,"match="+u,"update="+l].join("&")},a)},t=!1,n=function(){t||(t=!0,e.after_scroll?document.addEventListener("scroll",function(){(window.pageYOffset||document.documentElement.scrollTop>0)&&o(e.goals,e.value,{},e.timeout)},{once:true}):e.auto_load&&o(e.goals,e.value,{},e.timeout))};"complete"===document.readyState||"interactive"===document.readyState?n():window.addEventListener("load",n);window.ak_pixel_push=function(e,t,n,a,d,c){var i=[];Array.isArray(e)?i=e:i[0]=e,o(i,t,{match:n,update:a,matching_mode:d,db_id:c},0)}}();
+    !function(){var e={url:"https://pxl.andrey-morozov.dev.altkraft.com/pixel?k=34FyFph%2BVuzFYrhPh7C10LKGAC08z3lrm%2Fqui6fGQJa6XD9SM9jghQ%3D%3D&s=qpH7UKN%2BkZA%3D",goals:"",value:parseFloat("0"),timeout:parseInt("0"),after_scroll:JSON.parse("false"),auto_load:JSON.parse("true")},o=function(o,t,n,a){var d=[].concat(o).map(function(e){return encodeURIComponent(e)}).join(","),c=encodeURIComponent(String(t||0)),i=encodeURIComponent(n.matching_mode||""),r=encodeURIComponent(n.db_id||0),u=encodeURIComponent(JSON.stringify(n.match||{})),l=encodeURIComponent(JSON.stringify(n.update||{}));setTimeout(function(){(new Image).src=[e.url,"goals="+d,"value="+c,"db_id="+r,"mmode="+i,"match="+u,"update="+l].join("&")},a)},t=!1,n=function(){t||(t=!0,e.after_scroll?document.addEventListener("scroll",function(){(window.pageYOffset||document.documentElement.scrollTop>0)&&o(e.goals,e.value,{},e.timeout)},{once:true}):e.auto_load&&o(e.goals,e.value,{},e.timeout))};"complete"===document.readyState||"interactive"===document.readyState?n():window.addEventListener("load",n);window.ak_pixel_push=function(e,t,n,a,d,c){var i=[];Array.isArray(e)?i=e:i[0]=e,o(i,t,{match:n,update:a,matching_mode:d,db_id:c},0)}}();
 </script>
 <!-- END OF ALTCRAFT PIXEL CODE !-->
 </body>
