--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Title 123</title>
     <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwz"></script>
 </head>
 <body>
