--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title 123</title>
-    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwz"></script>
+    <script src="https://pxl.igor-egorov.dev.altkraft.com/ak_container.js?id=MXw2Ng.." ></script>
 </head>
 <body>
 <button type="button" id="init_sub" style="height: 100px; padding: 25px">TEST PIXEL на уведомления</button>
