--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         try {
             var akPush = new AKPush();
 
-            akPush.initSubscription({ email: 'chrome_on_the_machintosh@azcabaeba.su' }) // ..показать форму подписки
+            akPush.initSubscription({ email: 'bulba@azcabaeba.su' }) // ..показать форму подписки
         }
         catch (e) {
             alert(JSON.stringify(e)); // Или записать ошибку в alert (консоль) браузера
