--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <title>Title</title>
-    <script src="./service-worker.js" ></script>
+    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXwz" ></script>
 </head>
 <body>
 <button type="button" id="init_sub" style="height: 100px; padding: 25px">TEST PIXEL на уведомления</button>
