--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     }, 1000)
 
     document.getElementById('init_sub').addEventListener('click', function() {
-        fetch('http://click.andrey-morozov.dev.altkraft.com/trg/65512f8ec196edd65c541df5a9a08449ec91dbf287bb334c2f3de6b87e2969e3/<email|md5|xxh>');
+        //fetch('http://click.andrey-morozov.dev.altkraft.com/trg/65512f8ec196edd65c541df5a9a08449ec91dbf287bb334c2f3de6b87e2969e3/<email|md5|xxh>');
     });
     document.getElementById('run_push').addEventListener('click', function() { // По клику на кнопку..
         try {
