--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         try {
             const akPush = new AKPush({
                 debug: 'true',
-                swPath: './assets/service-worker.js',
+                swPath: '/assets/service-worker.js',
             });
 
             akPush.initSubscription({ email: 'bulba@azcabaeba.su' }) // ..показать форму подписки
