--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
 
         console.log(registration);
 
+        window.akPush = new AKPush({
+            debug: 'true',
+            swPath: '/assets/service-worker.js',
+        });
+
     });
 
     document.getElementById('run_push').addEventListener('click', function() {
