--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
     <title>Title</title>
 <!--    <script src="ak-push.js" ></script>-->
-    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXw0" ></script>
+<!--    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXw0" ></script>-->
+    <script src="https://pxl.andrey-morozov.dev.altkraft.com/ak_container.js?id=MXw2" ></script>
 </head>
 <body>
 <button type="button" id="init_sub" style="height: 100px; padding: 25px">initSubscription</button>
