--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <title>Title</title>
 
-    <script src="https://pxl.igor-egorov.dev.altkraft.com/ak_container.js?id=MXw2NQ.." ></script>
-    <!-- <script src="ak-push.js" ></script> -->
+<!--    <script src="https://pxl.igor-egorov.dev.altkraft.com/ak_container.js?id=MXw2NQ.." ></script>-->
+     <script src="ak-push.js" ></script>
 </head>
 <body>
 <button type="button" id="init_sub" style="height: 100px; padding: 25px">Пользователь 1</button>
