remove first, cache, worker

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     window.onload = () => navigator.serviceWorker.getRegistrations().then(function(registrations) {
         window.WebWorkers = registrations;
 
-        const registration = navigator.serviceWorker.register(
-            "cache-service-worker.js",
-            { scope: "/" },
-        );
+        // const registration = navigator.serviceWorker.register(
+        //     "cache-service-worker.js",
+        //     { scope: "/" },
+        // );
+        //
+        // console.log("cache-service-worker.js", registration);
 
-        console.log("cache-service-worker.js", registration);
-
-        window.akPush = new AKPush();
+        window.akPush = new AKPush({});
 
     });
 
