--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white" />
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/amorozov.github.io/manifest.json">
 
     <title>Title</title>
 
